wip: fix gap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -232,7 +232,7 @@ span.price{font-weight:bold;font-size:30px;}
 .site-Banner .Banner-details h1{color:#fff;font-size:60px;text-shadow:6px 6px 7px #000;}
 .slick-slider .slick-list div img{width:100%;}
 .slick-slider .slick-list div img{width:100%;margin:0;}
-.slick-slider .slick-list .site-Banner:before{content:"";background:#0000004a;position:absolute;top:0;left:0;bottom:0;right:0;width:100%;z-index:1;height:calc(100% - 10px);}
+.slick-slider .slick-list .site-Banner:before{content:"";background:#0000004a;position:absolute;top:0;left:0;bottom:0;right:0;width:100%;z-index:1;height:calc(100% - 6px);}
 .site-Banner .Banner-details .sub-title{color:#fff;text-shadow:2px 2px 3px #000;font-size:28px;}
 .site-Banner .Banner-details a{background: #000000; color:#fff;text-decoration:none;padding:12px 25px;border-radius:3px;display:inline-block;letter-spacing:1px;}
 .site-Banner .Banner-details >div{max-width:70%;}
